Fixed issues: Answer box to Number type Clear answer box Correct answer was set to lower incorrectly

--- a/controller.html
+++ b/controller.html
@@ -22,7 +22,7 @@
             <p id="question"></p>
         </div>
         <div>
-            <input type="text" type="number" id="answer" />
+            <input type="number" id="answer" />
             <input type="button" value="Submit" id="answerBtn" onclick="submitAnswer()" />
         </div>
     </form>
