added screen css, fixed New Round button showing

--- a/screen.html
+++ b/screen.html
@@ -6,11 +6,13 @@
     <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
     <script type="text/javascript" src="screen .js"></script>
     <script type="text/javascript" src="data.json"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="screen.css" />
 </head>
 <body>
-    <h1 id="userInfo">Enter Player Info on Your Device:</h1>
-    <form id="form1"></form>
-    <form id="form2"></form>
+    <form id="playerInfo"></form>
+    <div>
+        <h1 id="question">Enter Player Info on Your Device:</h1>
+        <form id="answerForm"></form>
+    </div>
 </body>
 </html>
