--- a/controller.html
+++ b/controller.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="controller.css" />
 </head>
 <body>
+    <h1 id="playerPoints"></h1>
     <form id="form1" class="formContainer">
         <div>
             <input type="text" id="playerInfo" placeholder="Player Name" onfocus="this.placeholder=''" onblur="this.placeholder='Player Name'"/>
